--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <link href="css/style.css" rel="stylesheet">
   
   <!--Favicon-->
-  <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
-  <link rel="icon" href="images/favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="images/hs.svg" type="image/x-icon">
+  <link rel="icon" href="images/hs.svg" type="image/x-icon">
 	
 </head>
 
@@ -31,7 +31,7 @@
 
 <header class="navigation fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/H.png" alt="Myself"></a>
+    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/h.png" alt="Myself"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -280,7 +280,7 @@ programming skills and play games in my free time. The goal of my career is to e
           <img src="images/portfolio/item-1.png" alt="portfolio-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="#">view project</a>
+              <a class="btn btn-light btn-sm" href="https://drive.google.com/file/d/1kiL5DMZKJLjDI5FPFfFVglACnLAstReE/view?usp=sharing" target="_blank">view project</a>
             </div>
           </div>
         </div>
@@ -290,7 +290,7 @@ programming skills and play games in my free time. The goal of my career is to e
           <img src="images/portfolio/item-2.png" alt="portfolio-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="#">view</a>
+              <a class="btn btn-light btn-sm" href="https://drive.google.com/file/d/1quPRcFVjwVvUr2N-Q8ZK-zC6KsTVLjxm/view?usp=sharing" target="_blank">view</a>
             </div>
           </div>
         </div>
@@ -300,7 +300,7 @@ programming skills and play games in my free time. The goal of my career is to e
           <img src="images/portfolio/item-3.png" alt="portfolio-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="#">view</a>
+              <a class="btn btn-light btn-sm" href="https://drive.google.com/file/d/149weJBBY0aw6iDuMqpe_LH7LSvUmy6BB/view?usp=sharing" target="_blank">view</a>
             </div>
           </div>
         </div>
@@ -310,7 +310,7 @@ programming skills and play games in my free time. The goal of my career is to e
           <img src="images/portfolio/item-4.png" alt="portfolio-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="#">view</a>
+              <a class="btn btn-light btn-sm" href="https://drive.google.com/file/d/1GtxGm0fNsbKrX9SGam0TMnnTacGkGJXH/view?usp=sharing" target="_blank">view</a>
             </div>
           </div>
         </div>
@@ -318,7 +318,7 @@ programming skills and play games in my free time. The goal of my career is to e
       </div>
 	  <div class="col-lg-10 mx-auto text-center">
         <p class="font-secondary paragraph-lg text-dark">
-			<a href="https://drive.google.com/drive/folders/1nR8lZX6ANVXRhoCurA-qhkvTg5D4JRDm?usp=sharing" class="btn btn-transparent">View More</a></p>
+			<a href="https://drive.google.com/drive/folders/1nR8lZX6ANVXRhoCurA-qhkvTg5D4JRDm?usp=sharing" target="_blank" class="btn btn-transparent">View More</a></p>
       </div>
   </div>
 </section>
