--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ programming skills and play games in my free time. The goal of my career is to e
           <div class="card-body text-center px-4 py-5">
             <i class="ti-desktop icon mb-5 d-inline-block"></i>
             <h4 class="mb-4">Website Design</h4>
-            <p>the process of planning, conceptualizing, and arranging content online. It also includes web apps, and user interface design.</p>
+            <p>The process of planning, conceptualizing, and arranging content online. It also includes web apps, and user interface design.</p>
           </div>
         </div>
       </div>
