--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <header class="navigation fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/h.png"></a>
+    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/h.png" alt="Myself"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -356,7 +356,7 @@ programming skills and play games in my free time. The goal of my career is to e
           <div class="card-body text-center px-4 py-5">
             <i class="ti-desktop icon mb-5 d-inline-block"></i>
             <h4 class="mb-4">Website Design</h4>
-            <p>The process of planning, conceptualizing, and arranging content online. It also includes web apps, and user interface design.</p>
+            <p>the process of planning, conceptualizing, and arranging content online. It also includes web apps, and user interface design.</p>
           </div>
         </div>
       </div>
