--- a/index.html
+++ b/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Portfolio | Himshikha</title>
-
-  <!-- mobile responsive meta -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="author" content="Himshikha & an0N">
-  
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <!-- slick slider -->
-  <link rel="stylesheet" href="plugins/slick/slick.css">
-  <!-- themefy-icon -->
-  <link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
-
-  <!-- Main Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
-  
-  <!--Favicon-->
-  <link rel="shortcut icon" href="images/hs.svg" type="image/x-icon">
-  <link rel="icon" href="images/hs.svg" type="image/x-icon">
+  	<meta charset="utf-8">
+  	<meta name="theme-color" content="#41228e"/>
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  	<meta name="author" content="Himshikha & an0N">
+  	<title>Portfolio | Himshikha</title>
+  	<!-- Bootstrap -->
+  	<link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+  	<!-- slick slider -->
+  	<link rel="stylesheet" href="plugins/slick/slick.css">
+  	<!-- themefy-icon -->
+  	<link rel="stylesheet" href="plugins/themify-icons/themify-icons.css">
+	<!-- Main Stylesheet -->
+  	<link href="css/style.css" rel="stylesheet">
+  	<!--Favicon-->
+  	<link rel="shortcut icon" href="images/H.png" type="image/x-icon">
+  	<link rel="icon" href="images/H.png" type="image/x-icon">
 	
 </head>
 
+
 <body>
-  
 
 <header class="navigation fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/H.png" alt="Myself"></a>
+    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/h.png" alt="Myself"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
