--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ programming skills and play games in my free time. The goal of my career is to e
       </div>
 	  <div class="col-lg-10 mx-auto text-center">
         <p class="font-secondary paragraph-lg text-dark">
-			<a href="https://drive.google.com/drive/folders/1nR8lZX6ANVXRhoCurA-qhkvTg5D4JRDm?usp=sharing" target="_blank" class="btn btn-transparent">View More</a></p>
+			<a href="portfolio.html" class="btn btn-transparent">View More</a></p>
       </div>
   </div>
 </section>
